# django-appdata

./: README.rst  pyproject.toml
app_data/: containers.py  fields.py  forms.py  registry.py
test_app_data/: settings.py  test_admin.py  test_fields.py  test_forms.py
