[tool.poetry]
name = "django-appdata"
version = "0.3.0"
description = "Extendable field and related tools that enable Django apps to extend your reusable app"
authors = ["Carl Marshall <marshalc@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "~3"

[tool.poetry.dev-dependencies]
coverage = "^5.1"
pytest = "^5.4.1"
pytest-django = "^3.9.0"
pytest-cov = "^2.8.1"
pytest-pep8 = "^1.0.6"
pytest-flakes = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
