[tool.poetry]
name = "django-appdata"
version = "0.3.0"
description = "Extendable field and related tools that enable Django apps to extend your reusable app"
authors = [
    "Ella Development Team <dev@ellaproject.cz>",
    "Iacopo Spalletti <i.spalletti@nephila.digital>",
    "Carl Marshall <marshalc@users.noreply.github.com>"
]
readme = "README.rst"
homepage = "https://github.com/marshalc/django-appdata"
repository = "https://github.com/marshalc/django-appdata"
license = "BSD-3-Clause"
classifiers = [
    'Development Status :: 4 - Beta',
    'Framework :: Django',
    'Framework :: Django :: 2.2',
    'Framework :: Django :: 3.0',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Operating System :: OS Independent',
]
packages = [
    { include = 'app_data' },
    { include = 'README.rst' },
]

[tool.poetry.dependencies]
python = ">=3.6 <4"
django = "3.*"

[tool.poetry.dev-dependencies]
coverage = "^5.1"
pytest = "~6.0"
pytest-django = "^3.9.0"
pytest-cov = "^2.8.1"
pytest-pep8 = "^1.0.6"
pytest-flakes = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
